[package]
name = "easy-acme"
version = "0.1.0"
edition = "2024"
authors = ["dlzht@protonmail.com"]
license = "Apache-2.0"
keywords = ["acme", "certificate"]
categories = ["asynchronous", "command-line-utilities"]
repository = "https://github.com/dlzht/easy-acme"
exclude = ["examples", "typos.toml", "rustfmt.toml", ".gitignore"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["std"]}
snafu = "0.8.5"


