[package]
name = "easy-acme"
version = "0.1.0"
edition = "2024"
authors = ["dlzht@protonmail.com"]
license = "Apache-2.0"
keywords = ["acme", "certificate"]
categories = ["asynchronous", "command-line-utilities"]
repository = "https://github.com/dlzht/easy-acme"
exclude = ["examples", "typos.toml", "rustfmt.toml", ".gitignore"]

[dependencies]
base64ct = "1.7"
crypto-common = "0.1.6"
hex = "0.4"
hmac = "0.12"
jiff = "0.2"
jose-jwk = "0.1"
jose-jws = "0.1"
http = "1.3"
p256 = { version = "0.13", features = ["ecdsa"]}
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["std"]}
serde_urlencoded = "0.7.1"
snafu = "0.8.5"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.45", features = ["full"]}


